samples/_failures_safe/1761631458_e52c9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74125fc7.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | void parser
      | ^~~~
